--- a/capacidadesTecnicas.html
+++ b/capacidadesTecnicas.html
@@ -108,13 +108,13 @@
     <div class="contenedor-footer">
       <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
       <address class="info-footer">
-        <p><small>© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
-        <p>Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
+        <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
+        <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
       </address>
       <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
         <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
         <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
-        <a href="javascript:void(0)" data-i18n="footerContacto">Contacto</a>
+        <a href="contacto.html#contacto" data-i18n="contacto">Contacto</a>
       </nav>
     </div>
   </footer>
