--- a/capacidadesTecnicas.html
+++ b/capacidadesTecnicas.html
@@ -72,7 +72,7 @@
       <div class="capacidades-detalladas">
 
         <section class="bloque-capacidades grupo1" id="amplificadores">
-          <img src="imagenes/amplificadores.jpg" alt="Fotografía de Amplificadores de radiofrecuancia">
+          <img src="imagenes/amplificadores2.jpg" alt="Fotografía de Amplificadores de radiofrecuancia">
           <div class="texto izquierda">
             <h3 data-i18n="menuAmplificadores">Amplificadores</h3>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores harum natus consectetur labore esse similique facilis ipsum eveniet animi unde nihil, qui enim distinctio illum minima velit officia. Quia soluta voluptatum voluptas. Quasi adipisci facilis magni nesciunt laboriosam perspiciatis, vel delectus suscipit. Asperiores est numquam ipsum velit eveniet iure, cupiditate alias tenetur praesentium eaque cumque, sapiente ea a deserunt pariatur eius voluptates nostrum exercitationem dignissimos doloremque eos? Odit laborum porro architecto aspernatur perspiciatis est perferendis mollitia dolor animi assumenda earum neque illum dolorum voluptatibus, consequatur quae ipsam illo commodi vitae voluptates a aut amet maxime facere corporis. Quis, tempore culpa.
@@ -127,4 +127,5 @@
   <script src="js/traduccion-en.js"></script>
   <script src="js/switchIdioma.js"></script>
 </body>
+
 </html>
