--- a/capacidadesTecnicas.html
+++ b/capacidadesTecnicas.html
@@ -72,28 +72,84 @@
       <div class="capacidades-detalladas">
 
         <section class="bloque-capacidades grupo1" id="amplificadores">
-          <img src="imagenes/amplificadores2.jpg" alt="Fotografía de Amplificadores de radiofrecuancia">
-          <div class="texto izquierda">
-            <h3 data-i18n="menuAmplificadores">Amplificadores</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores harum natus consectetur labore esse similique facilis ipsum eveniet animi unde nihil, qui enim distinctio illum minima velit officia. Quia soluta voluptatum voluptas. Quasi adipisci facilis magni nesciunt laboriosam perspiciatis, vel delectus suscipit. Asperiores est numquam ipsum velit eveniet iure, cupiditate alias tenetur praesentium eaque cumque, sapiente ea a deserunt pariatur eius voluptates nostrum exercitationem dignissimos doloremque eos? Odit laborum porro architecto aspernatur perspiciatis est perferendis mollitia dolor animi assumenda earum neque illum dolorum voluptatibus, consequatur quae ipsam illo commodi vitae voluptates a aut amet maxime facere corporis. Quis, tempore culpa.
+          <div class="contenedor-bloques">
+            <img src="imagenes/amplificadores2.jpg" alt="Fotografía de Amplificadores de radiofrecuancia">
+            <div class="texto izquierda">
+              <h3 data-i18n="menuAmplificadores">Amplificadores</h3>
+              <span data-i18n="textoAmplificadores"></span>
+            </div>
           </div>
           <div class="numero">1</div>
         </section>
 
         <section class="bloque-capacidades grupo2" id="camaras">
-          <div class="texto derecha">
-            <h3 data-i18n="menuCamaras">Cámaras</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci perferendis veritatis nihil? Quidem magnam ut rem nisi eaque obcaecati nemo itaque officia. Consectetur quas enim distinctio eveniet! Accusamus adipisci assumenda laborum delectus harum, quis ipsam asperiores iure illum aperiam atque laudantium. Perferendis eos nostrum sit eligendi sint quidem minus nesciunt, harum fugit. Iure quia aspernatur tempora at labore in dicta a quos harum error rem asperiores debitis ratione, repellat perferendis, impedit aperiam. Ex dicta error facere corporis nobis eum esse quibusdam sequi quidem animi excepturi nam numquam aperiam iusto doloremque facilis, itaque eius in beatae. In voluptatibus modi, eos.
+          <div class="contenedor-bloques">
+            <div class="texto derecha">
+              <h3 data-i18n="menuCamaras">Cámaras</h3>
+              <span data-i18n="textoCamaras"></span>
+            </div>
+            <img src="imagenes/camaras.png" alt="Fotografía de cámara de alto vacío">
+            
           </div>
-          <img src="imagenes/camaras.png" alt="Fotografía de cámara de alto vacío">
           <div class="numero">2</div>
+          <div class="tabla">
+            <table border="1" cellspacing="0" cellpadding="5" class="tabla-original">
+              <thead>
+                <tr>
+                  <th>Characteristic</th>
+                  <th>MULCOPOWER TVAC</th>
+                  <th>TVC-1</th>
+                  <th>TVC-2</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td rowspan="2">Useful Capacity</td>
+                  <td>Ø 1000mm</td>
+                  <td>Ø 1300mm</td>
+                  <td>Ø 800mm</td>
+                </tr>
+                <tr>
+                  <td>L 500</td>
+                  <td>L 1500</td>
+                  <td>L 1000</td>
+                </tr>
+                <tr>
+                  <td rowspan="2">Temperature Range</td>
+                  <td>-70°C to</td>
+                  <td>-150°C to</td>
+                  <td>-150°C to</td>
+                </tr>
+                <tr>
+                  <td>+90°C</td>
+                  <td>+150°C</td>
+                  <td>+150°C</td>
+                </tr>
+                <tr>
+                  <td rowspan="2">Vacuum</td>
+                  <td>Better than</td>
+                  <td>Better than</td>
+                  <td>Better than</td>
+                </tr>
+                <tr>
+                  <td>5x10<sup>-6</sup> mbar</td>
+                  <td>1x10<sup>-6</sup> mbar</td>
+                  <td>5x10<sup>-6</sup> mbar</td>
+                </tr>
+              </tbody>
+            </table>
+            <img src="imagenes/tabla01.png" alt="Versión móvil de la tabla" class="tabla-imagen">
+          </div>
+            
         </section>
 
         <section class="bloque-capacidades grupo3" id="areaLimpia">
-          <img src="imagenes/areaLimpia.jpg" alt="Fotografía de un laboratorio de área limpia">
-          <div class="texto izquierda">
-            <h3 data-i18n="menuAreaLimpia">Área limpia</h3>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. A possimus pariatur ea, veniam iusto aspernatur voluptates sapiente ipsam soluta enim reprehenderit, tenetur exercitationem quod porro. Voluptatem, sapiente facere rerum, reiciendis vero quidem perferendis dolores modi blanditiis excepturi eaque, dicta commodi dolore, tenetur ab voluptatibus. Expedita, est accusamus eaque necessitatibus voluptatem qui neque quibusdam animi vel non earum commodi vitae eveniet odio reiciendis obcaecati architecto debitis. Doloribus alias consequuntur saepe ab? Asperiores laboriosam veritatis aliquid odio magnam accusamus suscipit nulla minus, quaerat voluptas porro qui quam ipsam libero maxime praesentium voluptatem voluptatum itaque velit quis ipsa ex animi deserunt beatae fugit!
+          <div class="contenedor-bloques">
+            <img src="imagenes/areaLimpia.jpg" alt="Fotografía de un laboratorio de área limpia">
+            <div class="texto izquierda">
+              <h3 data-i18n="menuAreaLimpia">Área limpia</h3>
+              <span data-i18n="textoAreaLimpia"></span>
+            </div>
           </div>
           <div class="numero">3</div>
         </section>
@@ -127,5 +183,4 @@
   <script src="js/traduccion-en.js"></script>
   <script src="js/switchIdioma.js"></script>
 </body>
-
 </html>
