--- a/ensayos.html
+++ b/ensayos.html
@@ -76,14 +76,14 @@
           <div class="numero">1</div>
           <div class="texto izquierda">
             <h3 data-i18n="menuMultipactor">Multipactor</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores harum natus consectetur labore esse similique facilis ipsum eveniet animi unde nihil, qui enim distinctio illum minima velit officia. Quia soluta voluptatum voluptas. Quasi adipisci facilis magni nesciunt laboriosam perspiciatis, vel delectus suscipit. Asperiores est numquam ipsum velit eveniet iure, cupiditate alias tenetur praesentium eaque cumque, sapiente ea a deserunt pariatur eius voluptates nostrum exercitationem dignissimos doloremque eos? Odit laborum porro architecto aspernatur perspiciatis est perferendis mollitia dolor animi assumenda earum neque illum dolorum voluptatibus, consequatur quae ipsam illo commodi vitae voluptates a aut amet maxime facere corporis. Quis, tempore culpa.
+            <div data-i18n-html="textoMultipactor"></div>
           </div>
         </section>
 
         <section class="bloque-ensayo grupo2" id="corona">
           <div class="texto derecha">
             <h3 data-i18n="menuCorona">Corona</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci perferendis veritatis nihil? Quidem magnam ut rem nisi eaque obcaecati nemo itaque officia. Consectetur quas enim distinctio eveniet! Accusamus adipisci assumenda laborum delectus harum, quis ipsam asperiores iure illum aperiam atque laudantium. Perferendis eos nostrum sit eligendi sint quidem minus nesciunt, harum fugit. Iure quia aspernatur tempora at labore in dicta a quos harum error rem asperiores debitis ratione, repellat perferendis, impedit aperiam. Ex dicta error facere corporis nobis eum esse quibusdam sequi quidem animi excepturi nam numquam aperiam iusto doloremque facilis, itaque eius in beatae. In voluptatibus modi, eos.
+            <div data-i18n-html="textoCorona"></div>
           </div>
           <div class="numero">2</div>
           <img src="imagenes/corona.jpg" alt="Ensayo Corona">
@@ -94,14 +94,14 @@
           <div class="numero">3</div>
           <div class="texto izquierda">
             <h3 data-i18n="menuPim">PIM</h3>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. A possimus pariatur ea, veniam iusto aspernatur voluptates sapiente ipsam soluta enim reprehenderit, tenetur exercitationem quod porro. Voluptatem, sapiente facere rerum, reiciendis vero quidem perferendis dolores modi blanditiis excepturi eaque, dicta commodi dolore, tenetur ab voluptatibus. Expedita, est accusamus eaque necessitatibus voluptatem qui neque quibusdam animi vel non earum commodi vitae eveniet odio reiciendis obcaecati architecto debitis. Doloribus alias consequuntur saepe ab? Asperiores laboriosam veritatis aliquid odio magnam accusamus suscipit nulla minus, quaerat voluptas porro qui quam ipsam libero maxime praesentium voluptatem voluptatum itaque velit quis ipsa ex animi deserunt beatae fugit!
+            <div data-i18n-html="textoPim"></div>
           </div>
         </section>
 
         <section class="bloque-ensayo grupo4" id="powerHandling">
           <div class="texto derecha">
             <h3 data-i18n="menuPowerHandling">Power handling</h3>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis obcaecati molestiae temporibus sit nemo rem, suscipit, reprehenderit ducimus ab assumenda, tempora placeat quam corporis! Mollitia atque fugiat harum amet perferendis repellat cumque nisi dolorum, quibusdam voluptas vel aperiam labore reprehenderit. Modi ratione aspernatur provident beatae obcaecati, sapiente doloribus voluptatibus eaque nam dicta voluptas minus perspiciatis, a, eos. Facere at laborum ratione perspiciatis odio mollitia dolore necessitatibus atque officia error rem esse cupiditate, dolorem laboriosam quidem voluptates sint nostrum facilis, illo modi dolorum assumenda. Modi, odio quam ipsam quae fugit tenetur ad sint, consectetur, tempora laboriosam qui excepturi minima consequuntur ipsa.
+            <div data-i18n-html="textoPowerHandling"></div>
           </div>
           <div class="numero">4</div>
           <img src="imagenes/powerHandling.jpg" alt="Ensayo Power Handling">
