--- a/index.html
+++ b/index.html
@@ -59,152 +59,226 @@
 
   <main>
     <section id="quienes" aria-labelledby="titulo-quienes" itemscope itemtype="https://schema.org/Organization">
-     <header>
-      <h2 id="titulo-quienes" data-i18n="tituloQuienes">Quienes somos</h2>
-    </header>
-    <div class="contenedor-quienes">
-      <article class="quienesSomos texto-quienes">
-        <div class="texto-lateral">
-          <h3 data-i18n="h3Quienes">Laboratorio INTA de radiofrecuencia</h3>
-          <div data-i18n-html="textoQuienes"></div>
+      <header>
+        <h2 id="titulo-quienes" data-i18n="tituloQuienes">Quienes somos</h2>
+      </header>
+      <div class="contenedor-quienes">
+        <article class="quienesSomos texto-quienes">
+          <div class="texto-lateral">
+            <h3 data-i18n="h3Quienes">Laboratorio INTA de radiofrecuencia</h3>
+            <div data-i18n-html="textoQuienes"></div>
+          </div>
+          <div class="imagen-quienes"><img src="imagenes/lab.jpg" data-i18n-alt="altImagenQuienes" alt="Vista del área limpia del laboratorio de radiofrecuencia del INTA"></div>
+        </article>
       </div>
-      <div class="imagen-quienes"><img src="imagenes/lab.png" data-i18n-alt="altImagenQuienes" alt="Vista del área limpia del laboratorio de radiofrecuencia del INTA"></div>
-    </article>
-  </div>
-</section>
+    </section>
 
-<section id="alta-potencia">
-  <h2 class="visualmente-oculto">Alta potencia</h2>
-  <div title="Trabajamos con alta potencia" data-i18n-title="titAltaPotencia"><span data-i18n="altaPotencia">ALTA POTENCIA</span></div>
-</section>
+    <section id="alta-potencia">
+      <h2 class="visualmente-oculto">Alta potencia</h2>
+      <div title="Trabajamos con alta potencia" data-i18n-title="titAltaPotencia"><span data-i18n="altaPotencia">ALTA POTENCIA</span></div>
+    </section>
 
-<section id="ensayos">
-  <header>
-    <h2 data-i18n="menuEnsayos">Ensayos</h2>
-  </header>
-  <div class="contenedor-ensayos">
-    <div class="ensayos-grid">
-      <article class="ensayo" onclick="window.location.href='ensayos.html#multipactor'">
-        <h3 class="visualmente-oculto">Multipactor</h3>
-        <figure>
-          <img src="imagenes/iconoMultipactor.png" data-i18n-alt="altIconoMultipactor" alt="Icono de Multipactor" title="Multipactor">
-          <figcaption data-i18n="menuMultipactor">Multipactor</figcaption>
-        </figure>
-      </article>
-      <article class="ensayo" onclick="window.location.href='ensayos.html#corona'">
-        <h3 class="visualmente-oculto">Corona</h3>
-        <figure>
-          <img src="imagenes/iconoCorona.png" data-i18n-alt="altIconoCorona" data-i18n-title="titIconoCorona" alt="Icono de Corona" title="Corona">
-          <figcaption data-i18n="menuCorona">Corona</figcaption>
-        </figure>
-      </article>
-      <article class="ensayo" onclick="window.location.href='ensayos.html#pim'">
-        <h3 class="visualmente-oculto">PIM</h3>
-        <figure>
-          <img src="imagenes/iconoPim.png" data-i18n-alt="altIconoPim" alt="Icono de PIM" title="PIM">
-          <figcaption data-i18n="menuPim">PIM</figcaption>
-        </figure>
-      </article>
-      <article class="ensayo" onclick="window.location.href='ensayos.html#powerHandling'">
-        <h3 class="visualmente-oculto">Power Handling</h3>
-        <figure>
-          <img src="imagenes/iconoPowerHandling.png" data-i18n-alt="altIconoPowerHandling" alt="Icono de Power Handling" title="Power handling">
-          <figcaption data-i18n="menuPowerHandling">Power Handling</figcaption>
-        </figure>
-      </article>
-    </div>
-    <div class="imagen-ensayos">
-      <img src="imagenes/anecoica.png" data-i18n-alt="altImagenEnsayos" data-i18n-title="titImagenEnsayos" alt="Foto de cámara anecoica con cámara térmica dentro">
-    </div>
-  </div>
+    <section id="introduccion" aria-labelledby="titulo-introduccion" itemscope itemtype="https://schema.org/Article">
+          <header>
+            <h2 id="titulo-introduccion" data-i18n="tituloIntroduccion"></h2>
+          </header>
+          <div class="contenedor-introduccion">
+            <article class="introduccion texto-introduccion">
+              <div class="texto-lateral">
+                <h3 data-i18n="h3Introduccion"></h3>
+                <div data-i18n-html="textoIntroduccion"></div>
+              </div>
+              <div class="imagen-introduccion"><img src="imagenes/fotoMisionGalileo.jpg" data-i18n-alt="altImagenIntroduccion" alt=""></div>
+            </article>
+          </div>
+        </section>
 
-</section>
-
-<section id="capacidades-tecnicas">
-  <header>
-    <h2 data-i18n="menuCapacidadesTecnicas">Capacidades Técnicas</h2>
-  </header>
-
-  <div class="contenedor-capacidades">
-    <div class="capacidades-grid">
-      <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#amplificadores')">
-        <h3 class="visualmente-oculto">Amplificadores</h3>
-        <figure>
-          <img src="imagenes/iconoAmplificadores.jpg" data-i18n-alt="altIconoAmplificadores" data-i18n-title="titIconoAmplificadores" alt="Icono de Amplificadores" title="Amplificadores">
-          <figcaption data-i18n="menuAmplificadores">Amplificadores</figcaption>
-        </figure>
-      </article>
-      <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#camaras')">
-        <h3 class="visualmente-oculto">Cámaras</h3>
-        <figure>
-          <img src="imagenes/iconoCamaras.jpg" data-i18n-alt="altIconoCamaras" data-i18n-title="titIconoCamaras" alt="Icono de Cámaras" title="Cámaras de vacío">
-          <figcaption data-i18n="menuCamaras">Cámaras</figcaption>
-        </figure>
-      </article>
-      <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#areaLimpia')">
-        <h3 class="visualmente-oculto">Área limpia</h3>
-        <figure>
-          <img src="imagenes/iconoAreaLimpia.jpg" data-i18n-alt="altIconoAreaLimpia" data-i18n-title="titIconoAreaLimpia" alt="Icono de Área limpia" title="Área limpia">
-          <figcaption data-i18n="menuAreaLimpia">Área limpia</figcaption>
-        </figure>
-      </article>
-    </div>
-    <div class="imagen-capacidades"><img src="imagenes/lab2.png" data-i18n-alt="altImagenCapacidades" data-i18n-title="titImagenCapacidades" alt="Foto de sala limpia con cámara de vacío"></div>
-  </div>
-
-</section>
-
-<section id="misiones">
-  <header>
-    <h2 data-i18n="menuMisionesParticipadas">Misiones Participadas</h2>
-  </header>
-  <div class="carrusel-misiones">
-    <button class="mision-flecha" aria-label="Desplazar a misión previa">&#10094;</button>
-    <div class="carrusel-ventana">
-      <div class="carrusel-imagenes">
-        <img src="imagenes/misiones01.png" data-i18n-alt="altCarrusel01" data-i18n-title="titCarrusel01" alt="Antena estrack de la ESA">
-        <img src="imagenes/misiones02.png" data-i18n-alt="altCarrusel02" data-i18n-title="titCarrusel02" alt="Logo de la sonda Galileo">
-        <img src="imagenes/misiones03_2.png" data-i18n-alt="altCarrusel03" data-i18n-title="titCarrusel03" alt="Logo de Juice de la ESA">
-        <img src="imagenes/misiones04.png" data-i18n-alt="altCarrusel04" data-i18n-title="titCarrusel04" alt="Logo de la Mars Science Laboratory de la ESA y la NASA">
-        <img src="imagenes/misiones05.png" data-i18n-alt="altCarrusel05" data-i18n-title="titCarrusel05" alt="Gran Antena europea espacial">
+    <section id="ensayos">
+      <header>
+        <h2 data-i18n="menuEnsayos">Ensayos</h2>
+      </header>
+      <div class="contenedor-ensayos">
+        <div class="ensayos-grid">
+          <article class="ensayo" onclick="window.location.href='ensayos.html#multipactor'">
+            <h3 class="visualmente-oculto">Multipactor</h3>
+            <figure>
+              <img src="imagenes/iconoMultipactor.png" data-i18n-alt="altIconoMultipactor" alt="Icono de Multipactor" title="Multipactor">
+              <figcaption data-i18n="menuMultipactor">Multipactor</figcaption>
+            </figure>
+          </article>
+          <article class="ensayo" onclick="window.location.href='ensayos.html#corona'">
+            <h3 class="visualmente-oculto">Corona</h3>
+            <figure>
+              <img src="imagenes/iconoCorona.png" data-i18n-alt="altIconoCorona" data-i18n-title="titIconoCorona" alt="Icono de Corona" title="Corona">
+              <figcaption data-i18n="menuCorona">Corona</figcaption>
+            </figure>
+          </article>
+          <article class="ensayo" onclick="window.location.href='ensayos.html#pim'">
+            <h3 class="visualmente-oculto">PIM</h3>
+            <figure>
+              <img src="imagenes/iconoPim.png" data-i18n-alt="altIconoPim" alt="Icono de PIM" title="PIM">
+              <figcaption data-i18n="menuPim">PIM</figcaption>
+            </figure>
+          </article>
+          <article class="ensayo" onclick="window.location.href='ensayos.html#powerHandling'">
+            <h3 class="visualmente-oculto">Power Handling</h3>
+            <figure>
+              <img src="imagenes/iconoPowerHandling.png" data-i18n-alt="altIconoPowerHandling" alt="Icono de Power Handling" title="Power handling">
+              <figcaption data-i18n="menuPowerHandling">Power Handling</figcaption>
+            </figure>
+          </article>
+        </div>
+        <div class="imagen-ensayos">
+          <img src="imagenes/anecoica.png" data-i18n-alt="altImagenEnsayos" data-i18n-title="titImagenEnsayos" alt="Foto de cámara anecoica con cámara térmica dentro">
+        </div>
       </div>
+
+    </section>
+
+    <section id="capacidades-tecnicas">
+      <header>
+        <h2 data-i18n="menuCapacidadesTecnicas">Capacidades Técnicas</h2>
+      </header>
+
+      <div class="contenedor-capacidades">
+        <div class="capacidades-grid">
+          <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#amplificadores')">
+            <h3 class="visualmente-oculto">Amplificadores</h3>
+            <figure>
+              <img src="imagenes/iconoAmplificadores.jpg" data-i18n-alt="altIconoAmplificadores" data-i18n-title="titIconoAmplificadores" alt="Icono de Amplificadores" title="Amplificadores">
+              <figcaption data-i18n="menuAmplificadores">Amplificadores</figcaption>
+            </figure>
+          </article>
+          <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#camaras')">
+            <h3 class="visualmente-oculto">Cámaras</h3>
+            <figure>
+              <img src="imagenes/iconoCamaras.jpg" data-i18n-alt="altIconoCamaras" data-i18n-title="titIconoCamaras" alt="Icono de Cámaras" title="Cámaras de vacío">
+              <figcaption data-i18n="menuCamaras">Cámaras</figcaption>
+            </figure>
+          </article>
+          <article class="capacidad" onclick="window.location.assign('capacidadesTecnicas.html#areaLimpia')">
+            <h3 class="visualmente-oculto">Área limpia</h3>
+            <figure>
+              <img src="imagenes/iconoAreaLimpia.jpg" data-i18n-alt="altIconoAreaLimpia" data-i18n-title="titIconoAreaLimpia" alt="Icono de Área limpia" title="Área limpia">
+              <figcaption data-i18n="menuAreaLimpia">Área limpia</figcaption>
+            </figure>
+          </article>
+        </div>
+        <div class="imagen-capacidades"><img src="imagenes/lab2.png" data-i18n-alt="altImagenCapacidades" data-i18n-title="titImagenCapacidades" alt="Foto de sala limpia con cámara de vacío"></div>
+      </div>
+
+    </section>
+
+    <section id="misiones">
+      <header>
+        <h2 data-i18n="menuMisionesParticipadas">Misiones Participadas</h2>
+      </header>
+       <ul class="listado">
+        <li>
+          <span class="numeroItem">1</span>
+          ESA MULCOPIM Technical Committee
+        </li>
+        <li>
+          <span class="numeroItem">2</span>
+          IEC Technical Committee 46 (Passive Intermodulation)
+        </li>
+        <li>
+          <span class="numeroItem">3</span>
+          IEEE Transactions on Instrumentation and Measurements
+        </li>
+        <li>
+          <span class="numeroItem">4</span>
+          EURAMET-EMPIR “RF key quantities for 6G development”, Technical Advisory Group
+        </li>
+        <li>
+          <span class="numeroItem">5</span>
+          H2020 Large European Antenna
+        </li>
+        <li>
+          <span class="numeroItem">6</span>
+          EURAMET-EMPIR “FutureCom” Project
+        </li>
+        <li>
+          <span class="numeroItem">7</span>
+          EURAMET-EMPIR “RF key quantities for 6G development”
+        </li>
+        <li>
+          <span class="numeroItem">8</span>
+          MULCOPIM 2011, 2017, 2022, 2025
+        </li>
+        <li>
+          <span class="numeroItem">9</span>
+          European Technology Harmonization Program
+        </li>
+        <li>
+          <span class="numeroItem">10</span>
+          ESA 2025 Space Microwave Week
+        </li>
+        <li>
+          <span class="numeroItem">11</span>
+          Programas del Gobierno Español CSIC “Retos” y “Generación del Conocimiento”
+        </li>
+        <li>
+          <span class="numeroItem">12</span>
+          Universidad Autónoma de Madrid (UAM)
+        </li>
+        <li>
+          <span class="numeroItem">13</span>
+          Universidad Politécnica de Madrid (UPM)
+        </li>
+        
+
+        <!-- Repite para los demás ítems -->
+      </ul>
+      <div class="carrusel-misiones">
+        <button class="mision-flecha" aria-label="Desplazar a misión previa">&#10094;</button>
+        <div class="carrusel-ventana">
+          <div class="carrusel-imagenes">
+            <img src="imagenes/misiones01.png" data-i18n-alt="altCarrusel01" data-i18n-title="titCarrusel01" alt="Antena estrack de la ESA">
+            <img src="imagenes/misiones02.png" data-i18n-alt="altCarrusel02" data-i18n-title="titCarrusel02" alt="Logo de la sonda Galileo">
+            <img src="imagenes/misiones03_2.png" data-i18n-alt="altCarrusel03" data-i18n-title="titCarrusel03" alt="Logo de Juice de la ESA">
+            <img src="imagenes/misiones04.png" data-i18n-alt="altCarrusel04" data-i18n-title="titCarrusel04" alt="Logo de la Mars Science Laboratory de la ESA y la NASA">
+            <img src="imagenes/misiones05.png" data-i18n-alt="altCarrusel05" data-i18n-title="titCarrusel05" alt="Gran Antena europea espacial">
+            <img src="imagenes/misiones06.png" data-i18n-alt="altCarrusel06" data-i18n-title="titCarrusel06" alt="Logo del proyecto Gateway">
+            <img src="imagenes/misiones07_2.png" data-i18n-alt="altCarrusel07" data-i18n-title="titCarrusel07" alt="Imagen del cohete Ariane 6 de 2020">
+          </div>
+        </div>
+        <button class="mision-flecha" aria-label="Desplazar a misión posterior">&#10095;</button>
+      </div>
+    </section>
+
+
+  </main>
+
+  <footer class="pie">
+    <div class="contenedor-footer">
+      <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
+      <address class="info-footer">
+        <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
+        <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
+      </address>
+      <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
+        <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
+        <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
+        <a href="contacto.html#contacto" data-i18n="contacto">Contacto</a>
+      </nav>
     </div>
-    <button class="mision-flecha" aria-label="Desplazar a misión posterior">&#10095;</button>
+  </footer>
+  <div id="zoom-modal" class="modal">
+    <span class="cerrar">&times;</span>
+    <img class="modal-contenido" id="imagen-ampliada" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Imagen ampliada">
   </div>
-</section>
 
 
-</main>
-
-<footer class="pie">
-  <div class="contenedor-footer">
-    <img src="imagenes/logoInta2.png" alt="Logo INTA" class="logo-footer">
-    <address class="info-footer">
-      <p><small data-i18n="direccionEmpresa">© 2025 INTA - Laboratorio de Ensayos de Radiofrecuencia</small></p>
-      <p data-i18n="direccionDireccion">Ctra. Ajalvir, km 4, 28850 Torrejón de Ardoz, Madrid</p>
-    </address>
-    <nav class="enlaces-footer" aria-label="Enlaces legales y de contacto">
-      <a href="javascript:void(0)" data-i18n="footerAviso">Aviso Legal</a>
-      <a href="javascript:void(0)" data-i18n="footerPolitica">Política de Privacidad</a>
-      <a href="contacto.html#contacto" data-i18n="contacto">Contacto</a>
-    </nav>
-  </div>
-</footer>
-<div id="zoom-modal" class="modal">
-  <span class="cerrar">&times;</span>
-  <img class="modal-contenido" id="imagen-ampliada" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="Imagen ampliada">
-</div>
-
-
-<script src="js/menuSuperior.js"></script>
-<script src="js/slideshowCabecera.js"></script>
-<script src="js/efectoScrollMain.js"></script>
-<script src="js/carruselMisiones.js"></script>
-<script src="js/modalImagenes.js"></script>
-<script src="js/scrollUniversal.js"></script>
-<script src="js/traduccion-es.js"></script>
-<script src="js/traduccion-en.js"></script>
-<script src="js/switchIdioma.js"></script>
+  <script src="js/menuSuperior.js"></script>
+  <script src="js/slideshowCabecera.js"></script>
+  <script src="js/efectoScrollMain.js"></script>
+  <script src="js/carruselMisiones.js"></script>
+  <script src="js/modalImagenes.js"></script>
+  <script src="js/scrollUniversal.js"></script>
+  <script src="js/traduccion-es.js"></script>
+  <script src="js/traduccion-en.js"></script>
+  <script src="js/switchIdioma.js"></script>
 
 </body>
 </html>
