--- a/multimedia.html
+++ b/multimedia.html
@@ -72,26 +72,53 @@
       <div class="multimedia" id="multimedia">
         <div class="galeria-fotos">
           <figure>
-            <img src="imagenes/lab.png" alt="Foto 1 de sala limpia">
-            <figcaption data-i18n="multimediaImagen01">Vista 1 de sala limpia</figcaption>
+            <img src="imagenes/lab.jpg" alt="Foto 1 de sala limpia">
+            <figcaption data-i18n="multimediaSala1">Vista 1 de sala limpia</figcaption>
           </figure>
           <figure>
             <img src="imagenes/lab2.png" alt="Foto 2 de sala limpia">
-            <figcaption data-i18n="multimediaImagen02">Vista 2 de sala limpia</figcaption>
+            <figcaption data-i18n="multimediaSala2">Vista 2 de sala limpia</figcaption>
           </figure>
           <figure>
             <img src="imagenes/lab3.png" alt="Foto 3 de sala limpia">
-            <figcaption data-i18n="multimediaImagen03">Vista 3 de sala limpia</figcaption>
+            <figcaption data-i18n="multimediaSala3">Vista 3 de sala limpia</figcaption>
           </figure>
           <figure>
             <img src="imagenes/anecoica.png" alt="Cámara térmica dentro de cámara anecoica">
-            <figcaption data-i18n="multimediaImagen04">Cámara de temperatura dentro de cámara anecoica</figcaption>
+            <figcaption data-i18n="multimediaCamara">Cámara de temperatura dentro de cámara anecoica</figcaption>
           </figure>
+          <figure>
+            <img src="imagenes/fotoMisionGalileo.jpg" alt="Foto de satélite Galileo sobre fondo espacial">
+            <figcaption data-i18n="multimediaSatelite">Satélite de la Misión Galileo</figcaption>
+          </figure>
+         <figure>
+           <img src="imagenes/leaX5.png" data-src="https://www.hps-gmbh.com/5491/" alt="Fotograma de vídeo de Youtube">
+           <figcaption data-i18n="multimediaHps">Enlace a web de HPS para ver película en Youtube</figcaption>
+         </figure>
+         <figure>
+           <img src="imagenes/pdfPresentacion.png" data-src="pdf/RfPowerLaboratoryPresentation.pdf" alt="Imagen de la presentación del laboratorio RF en Powerpoint">
+           <figcaption class="figcaption-pdf">
+             <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
+             <span data-i18n="multimediaPdfPresentacion">PDF de presentación del laboratorio</span>
+           </figcaption>
+         </figure>
+         <figure>
+           <img src="imagenes/pdfHigh.png" data-src="pdf/RfHighPowerTestingWithinTheECSsStructure.pdf" alt="Imagen del pdf RF High-power Testing Within the ECSS Structure">
+           <figcaption class="figcaption-pdf">
+             <img src="imagenes/pdf_2.png" alt="Icono PDF" class="icono-pdf">
+             <span>PDF RF High-power Testing Within the ECSS Structure </span>
+           </figcaption>
+         </figure>
         </div>
 
       </div>
 
     </section>
+<!--     <section id="EnlacesInteres">
+      <div>
+        <a href="https://www.hps-gmbh.com/5491/">Podeis visitar este enlace de interés</a>
+      </div>
+    </section> -->
 
   </main>
 
